# JOBER

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.codex-test/jober_home/: perfil_maestro.json  tracking_postulaciones.csv
.github/workflows/: tests.yml
scripts/: create_profile.py  debug_agent.py  debug_linkedin_page.py  diagnostico_rapido.py  diagnostico_simple.py  find_easy_apply_job.py  search_probe.py  test_any_linkedin_job.py  test_browser_use_auto.py  test_browser_use_simple.py  test_end_to_end.py  test_flujo_completo.py  test_full_flow.py  test_full_linkedin_apply.py  test_full_pipeline.py  test_linkedin_button.py  test_linkedin_interactive.py  test_linkedin_with_login.py  test_mejoras.py  test_pdf_export.py  test_sebastian_profile.py  test_smart_finder.py  test_universal_agent.py  test_vision_mode.py
src/jober/: __init__.py
src/jober/agents/: auto_apply.py  autonomous_search.py  cv_latex_writer.py  cv_reader.py  cv_writer.py  job_scraper.py  offer_evaluator.py  onboarding.py  onboarding_preferences.py  orchestrator.py  smart_button_finder.py  universal_form_filler.py  vision_button_finder.py
src/jober/cli/: autonomous.py  main.py  preferences_flow.py
src/jober/core/: config.py  logging.py  models.py  prompts.py  state.py
src/jober/utils/: file_io.py  language_detection.py  llm_helpers.py  pdf_export.py  runtime_status.py  status_server.py  tracking.py  web_search.py
tests/: test_auto_apply.py  test_profiles.py  test_stability.py  test_tracking.py
(+6 files in other folders)
